<!--TODO
    Implement all strings from prototype design
    Define strings required to access from REST API, such as any
        filenames or IDs
    Define if we need specific resource IDs
    -->

<resources>
    <!-- System Strings -->
    <string name="app_name">TABL</string>
    <string name="version_name">Version 0.6.3</string>

    <!-- Util Strings -->
    <string name="todo">Function not implemented</string>
    <string name="var_undefined">UNDEFINED</string>
    <string name="var_unavailable">(unavailable)</string>
    <string name="connection_failure">No Internet Connection!</string>

    <!-- FindRestaurantActivity Strings -->
    <string name="title_activity_restaurant_map">Map</string>
    <string name="dist_miles">miles</string>
    <string name="dist_km">km</string>
    <string name="gps_dialog_title">Turn on GPS</string>
    <string name="gps_dialog_info_text">Do you want this app to use your location? It can still function using search, but it\'ll be less accurate. \nYou must enable network and GPS search for this service to function.</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="use_search_not_gps">Use Search Instead</string>
    <string name="search">Search(…, &#8230;)</string>
    <string name="distance">km</string>

    <!-- Menu List -->
    <string-array name="Menu_List">

        <item>Spaghetti Bolognese</item>
        <item>Cabonara Lite</item>
        <item>Cheesy Italian Tortellini</item>
        <item>Basil Chicken and Olives</item>
        <item>Garlic Baguette and Olives</item>

    </string-array>

    <!--submenu List -->
    <string-array name="SubMenu_List">

        <item>Offers</item>
        <item>Starters</item>
        <item>Mains</item>
        <item>Desserts</item>
        <item>Drinks</item>
        <item>Sides</item>

    </string-array>

    <!-- Filter List -->
    <string-array name="Filter_menu">
        <item>Halal</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Gluten Free</item>
    </string-array>



    <!--Basket Page Strings -->
    <string name="text_basket">Basket</string>
    <string name="text_location">Location</string>
    <string name="button_proceed_to_payment">Proceed To Payment</string>
    <string name="button_add_tip">Add Tip</string>
    <string name="button_select_a_table">Select A Table</string>

    <string name="cancel_dialog">Cancel</string>
    <string name="dialog_confirm_gps">OK</string>
    <string name="remember_warning">TEST WARNING</string>


    <!--Help Page Strings -->
    <string name="help">Help</string>

    <!--Checkout Page Strings -->
    <string name="help_with_order">Help With Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="total">Total:</string>
    <string name="order_details">Order Details:</string>

    <!--More Page Strings -->
    <string name="dark_mode">Dark Mode</string>
    <string name="ongoing_order">Ongoing Order</string>
    <string name="past_orders">Past Orders</string>
    <string name="Help">Help</string>
    <string name="group_18">Group 18</string>
    <string name="More">More</string>
    <string name="bella_italia">Bella Italia</string>
    <string name="_10_high_street_uxbridge">10 High Street, Uxbridge</string>
    <string name="dialog_title">Filters</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="fb">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="add_tip">Add Tip</string>
    <string name="add_a_tip">Add a tIP</string>
    <string name="add_0_00">Add(£0.00</string>
</resources>
